--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 sudo: required
 dist: trusty
 script:
-- echo "foo"
+- echo "$TRAVIS_TAG"
+- echo "$TRAVIS_BRANCH"
 deploy:
   provider: releases
   prerelease: true
