--- a/.travis.yml
+++ b/.travis.yml
@@ -29,4 +29,4 @@ deploy:
     on:
       repo: vladak/reltest
       tags: true
-      condition: "$TRAVIS_TAG !~ rc[0-9]+$"
+      condition: "! $TRAVIS_TAG =~ rc[0-9]+$"
